[project]
name = "lm-hojdapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.0.1",
    "pystac-client>=0.8.6",
    "rasterio>=1.4.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
